# test_task_hammer_systems

./: .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
postman/: Postman collection for render.json  Referral app.postman_collection.json
referral_app/: asgi.py  settings.py  urls.py  wsgi.py
referral_app/api/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
referral_app/api/fixtures/: users.json
referral_app/api/migrations/: 0001_initial.py
referral_app/api/utils/: add_referral_link.py  authentication.py  exceptions.py  generate_code.py
referral_app/locale/ru/LC_MESSAGES/: django.mo  django.po
